--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.29)
 project(CW_NM)
 
 set(CMAKE_CXX_STANDARD 23)
@@ -6,5 +6,4 @@ set(CMAKE_CXX_STANDARD 23)
 include_directories(./include)
 file(GLOB SRC src/*.cpp)
 
-add_executable(CW_NM ${SRC}
-        src/euler.cpp)
+add_executable(CW_NM ${SRC}  src/main.cpp)
